kubernetes/nginx/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
  labels:
    name: nginx-service
spec:
  selector:
    app: laravel-app
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  loadBalancerIP: '35.237.103.112'
