kubernetes/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
  labels:
    name: nginx-service
spec:
  selector:
    app: sou-autores-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
