kubernetes/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: kubernetes.test
    http:
      paths:
        - path: /
          backend:
            serviceName: nginx-service
            servicePort: 80
